--- a/.user.ini
+++ b/.user.ini
@@ -1,4 +1,4 @@
-memory_limit = 756M
-max_execution_time = 18000
+memory_limit = 2G
+max_execution_time = 96000
 session.auto_start = off
 suhosin.session.cryptua = off
